--- a/frontend/index.html
+++ b/frontend/index.html
@@ -358,9 +358,11 @@ if (typeof speechSynthesis !== "undefined") {
 }
 
 // Klick startet Begrüßung (wenn noch nicht erfolgt)
-window.addEventListener("click", () => {
-  if (!greeted) loadVoicesAndGreet();
+window.addEventListener("resize", () => {
+  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
 });
-</script>
+
 </body>
 </html>
