--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,246 +123,4 @@ loader.load("./avatar.glb",
 
     // === Mundscheibe (flach) unter Mundöffnung ===
     const box = new THREE.Box3().setFromObject(model);
-    const size = box.getSize(new THREE.Vector3());
-    const radius = Math.max(size.x, size.y, size.z) * 0.12;
-
-    const geom = new THREE.CircleGeometry(radius, 32);
-    const mat = new THREE.MeshStandardMaterial({
-      color: 0x8b6c2a,
-      metalness: 0.8,
-      roughness: 0.2,
-      side: THREE.DoubleSide
-    });
-
-    const mouthDisk = new THREE.Mesh(geom, mat);
-    mouthDisk.rotation.x = Math.PI / 2;
-    mouthDisk.position.set(0, -0.12, -0.04);
-    mouthDisk.renderOrder = 1;
-    mouthDisk.material.depthTest = true;
-    mouthDisk.material.depthWrite = true;
-    model.add(mouthDisk);
-
-    model.traverse(child=>{
-      if(child.isMesh && child.material){
-        child.material.transparent = false;
-        child.material.opacity = 1;
-      }
-    });
-
-    model.traverse(child=>{
-      if(child.isMesh && child.morphTargetDictionary){
-        jawDict=child.morphTargetDictionary;
-        jawInfluences=child.morphTargetInfluences;
-        if("jawOpen" in jawDict) jawIndex=jawDict["jawOpen"];
-      }
-    });
-
-    const box2 = new THREE.Box3().setFromObject(model);
-    const center = box2.getCenter(new THREE.Vector3());
-    model.position.sub(center);
-    model.rotation.set(0, -Math.PI/2, 0);
-
-    const maxDim = Math.max(box2.getSize(new THREE.Vector3()).x, box2.getSize(new THREE.Vector3()).y, box2.getSize(new THREE.Vector3()).z);
-    const fov = camera.fov*Math.PI/180;
-    const cameraZ = Math.abs(maxDim/2/Math.tan(fov/2))*1.4;
-    camera.position.set(0,0,cameraZ);
-    camera.lookAt(0,0,0);
-
-    baseRotY = model.rotation.y;
-    baseRotX = model.rotation.x;
-    baseY = model.position.y + 0.05;
-    loadingText.style.display="none";
-    animate();
-  },
-  undefined,
-  err=>console.error("Fehler beim Laden des Modells:", err)
-);
-
-function animate(){
-  requestAnimationFrame(animate);
-  if(model){
-    if(talking){
-      model.rotation.y = baseRotY + Math.sin(Date.now()*0.0015)*0.04;
-      model.rotation.x = baseRotX + Math.sin(Date.now()*0.0019)*0.025;
-      model.position.y = baseY + Math.sin(Date.now()*0.01)*0.004;
-    } else {
-      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY,0.05);
-      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX,0.05);
-      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY,0.05);
-    }
-  }
-  renderer.render(scene,camera);
-}
-// Sprachsteuerung
-const micBtn=document.getElementById("micBtn");
-const micNotice=document.getElementById("micNotice");
-let recognizing=false, recognition;
-
-if("webkitSpeechRecognition" in window){
-  recognition=new webkitSpeechRecognition();
-  recognition.lang="de-DE";
-  recognition.continuous=false;
-  recognition.interimResults=false;
-
-  recognition.onresult=async (event)=>{
-    const text=event.results[0][0].transcript;
-    const resp = await fetch("/ask",{method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({text})});
-    const data = await resp.json();
-    speak(data.answer);
-  };
-  recognition.onend=()=>recognizing=false;
-} else {
-  micNotice.textContent="🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt.";
-}
-
-micBtn.onclick=()=>{
-  if(recognition){
-    if(recognizing){
-      recognition.stop();
-      recognizing=false;
-      micBtn.style.background="#222";
-    } else {
-      recognition.start();
-      recognizing=true;
-      micBtn.style.background="#555";
-    }
-  }
-};
-
-let selectedVoice = null;
-
-function getMaleVoice(){
-  const voices = speechSynthesis.getVoices();
-  selectedVoice = voices.find(v => /male|mann|stefan|markus|male/i.test(v.name)) ||
-                  voices.find(v => v.lang.startsWith("de")) ||
-                  voices[0];
-}
-
-if (typeof speechSynthesis !== "undefined") {
-  speechSynthesis.onvoiceschanged = getMaleVoice;
-  getMaleVoice();
-}
-
-function buildPulseSchedule(text, rate=1.0){
-  const durationEst=Math.max(0.8,text.length/(12*rate));
-  const pulses=[];
-  const vowels="aäeéiíoöuüyAUOÄÖÜaeiou";
-  let t=0;
-  for(let i=0;i<text.length;i++){
-    const ch=text[i];
-    const strength=vowels.includes(ch)?1.0:0.6;
-    pulses.push({time:t,strength});
-    t+=0.09*(ch===" "?1.4:1.0);
-  }
-  const scale = durationEst/(t||1);
-  pulses.forEach(p=>p.time*=scale);
-  return {pulses,duration:durationEst};
-}
-
-function startJawDriver(text, rate=1.0){
-  if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-  const {pulses,duration}=buildPulseSchedule(text, rate);
-  const start=performance.now();
-  const pulseWidth=0.08, base=0.03, maxOpen=0.55;
-
-  function envelopeAt(t){
-    let e=0;
-    for(const p of pulses){
-      const dt=Math.abs(t-p.time);
-      if(dt<pulseWidth) e+=(1-dt/pulseWidth)*p.strength;
-    }
-    e+=0.15*(0.5+0.5*Math.sin(t*6.0));
-    return Math.min(1.0,e);
-  }
-
-  function step(){
-    const now=performance.now();
-    const t=(now-start)/1000;
-    if(talking && Array.isArray(jawInfluences) && jawIndex!==null){
-      const env=envelopeAt(Math.min(t,duration));
-      const target=THREE.MathUtils.clamp(base+env*maxOpen,0,1);
-      jawInfluences[jawIndex]=THREE.MathUtils.lerp(jawInfluences[jawIndex]||0,target,0.5);
-      jawDriverRAF=requestAnimationFrame(step);
-    }
-  }
-  step();
-}
-
-function stopJawDriver(){
-  if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-  jawDriverRAF=null;
-  if(Array.isArray(jawInfluences) && jawIndex!==null){
-    const closer=()=>{
-      const current=jawInfluences[jawIndex]||0;
-      const next=THREE.MathUtils.lerp(current,0,0.3);
-      jawInfluences[jawIndex]=next;
-      if(Math.abs(next)>0.001) requestAnimationFrame(closer);
-    };
-    closer();
-  }
-}
-
-function speak(text){
-  const utter = new SpeechSynthesisUtterance(text);
-  utter.lang = "de-DE";
-  utter.rate = 0.95;
-  utter.pitch = 0.6;
-  utter.voice = selectedVoice;
-  utter.onstart = () => { talking = true; startJawDriver(text, utter.rate); };
-  utter.onend = () => { talking = false; stopJawDriver(); };
-  speechSynthesis.speak(utter);
-}
-
-
-// Begrüßung beim ersten Klick, sobald Stimme verfügbar
-let greeted = false;
-window.addEventListener("click", () => {
-  if (!greeted) {
-    greeted = true;
-    const waitForVoice = () => {
-      if (selectedVoice) {
-        speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
-      } else {
-        setTimeout(waitForVoice, 100);
-      }
-    };
-    waitForVoice();
-  }
-});
-window.addEventListener("resize", () => {
- <script>
-let selectedVoice = null;
-let greeted = false;
-
-// Stimme laden, wenn verfügbar
-function loadVoicesAndGreet() {
-  const voices = speechSynthesis.getVoices();
-  if (voices.length > 0) {
-    selectedVoice = voices.find(v => /male|mann|stefan|markus|male/i.test(v.name)) ||
-                    voices.find(v => v.lang.startsWith("de")) ||
-                    voices[0];
-
-    if (!greeted) {
-      greeted = true;
-      speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
-    }
-  } else {
-    // Stimmen noch nicht verfügbar – später erneut versuchen
-    setTimeout(loadVoicesAndGreet, 100);
-  }
-}
-
-// Stimme bei Änderung laden
-if (typeof speechSynthesis !== "undefined") {
-  speechSynthesis.onvoiceschanged = loadVoicesAndGreet;
-}
-
-// Klick startet Begrüßung (wenn noch nicht erfolgt)
-window.addEventListener("resize", () => {
-  camera.aspect = window.innerWidth / window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
-
-</body>
-</html>
+    const size = box.getSize(new THREE.Vector3()
