--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@ Zum Starten den Kopf antippen, zum Fragen kurz Mikro drücken, nach Ende der Fra
 /* -------------------------
    Szene / Avatar
 ------------------------- */
-let model,talking=false;
+let model, talking=false;
 let baseRotY=Math.PI/2, baseRotX=0, baseY=0.6;
 let jawDict=null,jawInfluences=null,jawIndex=null,jawDriverRAF=null;
 let selectedVoice=null,greeted=false;
@@ -46,7 +46,7 @@ let selectedVoice=null,greeted=false;
 ------------------------- */
 const scene=new THREE.Scene();
 const camera=new THREE.PerspectiveCamera(30,window.innerWidth/window.innerHeight,0.1,1000);
-camera.position.set(0,0,2.8);
+camera.position.set(0,0,2.5);
 
 const renderer=new THREE.WebGLRenderer({canvas:document.getElementById("avatarCanvas"),antialias:true});
 renderer.setSize(window.innerWidth,window.innerHeight);
@@ -64,28 +64,44 @@ const loader=new THREE.GLTFLoader();
 const loadingText=document.getElementById("loading");
 
 loader.load("./avatar.glb", gltf=>{
-  model=gltf.scene; scene.add(model);
+  model=gltf.scene;
+  model.scale.set(0.8,0.8,0.8); // sichere Größe
+  scene.add(model);
 
+  // Kopf zentrieren
   const box=new THREE.Box3().setFromObject(model);
+  const center=box.getCenter(new THREE.Vector3());
+  model.position.sub(center);
+  model.rotation.set(0,-Math.PI/2,0);
+
+  // Mundscheibe erstellen
   const size=box.getSize(new THREE.Vector3());
   const radius=Math.max(size.x,size.y,size.z)*0.12;
   const geom=new THREE.CircleGeometry(radius,48);
   const mat=new THREE.MeshStandardMaterial({color:0x8b6b0f,metalness:0.6,roughness:0.35,side:THREE.DoubleSide});
   const mouthDisk=new THREE.Mesh(geom,mat);
-  mouthDisk.rotation.x=-Math.PI/2; mouthDisk.position.set(0,-0.06,0.06); mouthDisk.renderOrder=1;
+  mouthDisk.rotation.x=-Math.PI/2;
+  mouthDisk.position.set(0, -0.06, 0.06);
+  mouthDisk.renderOrder=1;
   scene.add(mouthDisk);
-
-  model.traverse(child=>{if(child.isMesh && child.material){child.material.transparent=false; child.material.opacity=1.0;}});
-  model.traverse(child=>{if(child.isMesh && child.morphTargetDictionary){jawDict=child.morphTargetDictionary;jawInfluences=child.morphTargetInfluences;if("jawOpen" in jawDict) jawIndex=jawDict["jawOpen"];}});
-
-  const center=new THREE.Box3().setFromObject(model).getCenter(new THREE.Vector3());
-  model.position.sub(center); model.rotation.set(0,-Math.PI/2,0);
   model.userData.mouthDisk=mouthDisk;
 
-  baseRotY=model.rotation.y; baseRotX=model.rotation.x; baseY=model.position.y+0.05;
+  // Morph Target jawOpen
+  model.traverse(child=>{
+    if(child.isMesh && child.morphTargetDictionary){
+      jawDict=child.morphTargetDictionary;
+      jawInfluences=child.morphTargetInfluences;
+      if("jawOpen" in jawDict) jawIndex=jawDict["jawOpen"];
+    }
+  });
+
+  baseRotY=model.rotation.y;
+  baseRotX=model.rotation.x;
+  baseY=model.position.y+0.05;
+
   loadingText.style.display="none";
   animate();
-}, undefined, err=>{console.error(err); loadingText.textContent="Fehler beim Laden des Avatars.";});
+}, undefined, err=>{ console.error(err); loadingText.textContent="Fehler beim Laden des Avatars."; });
 
 /* -------------------------
    Animation
@@ -141,8 +157,8 @@ micBtn.onclick=()=>{
   if(recognizing){ recognition.stop(); recognizing=false; micBtn.style.background="#222"; }
   else{ recognition.start(); recognizing=true; micBtn.style.background="#555"; }
 };
-/* -------------------------
-   Sprachsynthese / JawDriver
+   /* -------------------------
+   Sprachsynthese / Jaw-Driver
 ------------------------- */
 function getMaleVoice(){
   const voices = speechSynthesis.getVoices();
@@ -151,58 +167,67 @@ function getMaleVoice(){
                   voices[0] || null;
 }
 
-// Lade Stimmen entweder sofort oder wenn sie verfügbar werden
-if(typeof speechSynthesis !== "undefined"){
-  speechSynthesis.onvoiceschanged = () => {
-    getMaleVoice();
-    if(!greeted){
-      greeted = true;
-      setTimeout(()=>speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?"), 200);
-    }
-  };
+// Lade Stimmen, bis eine Stimme verfügbar ist
+function ensureVoicesLoaded(retries=5){
   getMaleVoice();
+  if(!selectedVoice && retries>0){
+    setTimeout(()=>ensureVoicesLoaded(retries-1),200);
+  }
+}
+
+// Browser-Initialisierung
+if(typeof speechSynthesis!=="undefined"){
+  speechSynthesis.onvoiceschanged=()=>{ ensureVoicesLoaded(); greetIfNeeded(); };
+  ensureVoicesLoaded();
+} else greetIfNeeded();
+
+// Begrüßung
+function greetIfNeeded(){
+  if(!greeted && selectedVoice){
+    greeted=true;
+    setTimeout(()=>speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?"),200);
+  }
 }
 
 /* Pulsplanung für Kieferanimation */
 function buildPulseSchedule(text, rate=1.0){
-  const durationEst = Math.max(0.8, text.length / (12*rate));
-  const pulses = [];
-  const vowels = "aäeéiíoöuüyAUOÄÖÜaeiou";
-  let t = 0;
+  const durationEst=Math.max(0.8,text.length/(12*rate));
+  const pulses=[];
+  const vowels="aäeéiíoöuüyAUOÄÖÜaeiou";
+  let t=0;
   for(let i=0;i<text.length;i++){
-    const ch = text[i];
-    const strength = vowels.includes(ch)?1.0:0.6;
-    pulses.push({time: t, strength});
-    t += 0.09*(ch===" "?1.4:1.0);
+    const ch=text[i];
+    const strength=vowels.includes(ch)?1.0:0.6;
+    pulses.push({time:t,strength});
+    t+=0.09*(ch===" "?1.4:1.0);
   }
-  const scale = durationEst/(t||1);
-  pulses.forEach(p=>p.time *= scale);
-  return {pulses, duration:durationEst};
+  const scale=durationEst/(t||1);
+  pulses.forEach(p=>p.time*=scale);
+  return {pulses,duration:durationEst};
 }
 
 function startJawDriver(text, rate=1.0){
   if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-  const {pulses,duration} = buildPulseSchedule(text, rate);
-  const start = performance.now();
-  const pulseWidth = 0.08, base=0.03, maxOpen=0.55;
+  const {pulses,duration}=buildPulseSchedule(text,rate);
+  const start=performance.now();
+  const pulseWidth=0.08, base=0.03, maxOpen=0.55;
 
   function envelopeAt(t){
     let e=0;
     for(const p of pulses){
       const dt=Math.abs(t-p.time);
-      if(dt < pulseWidth) e += (1 - dt/pulseWidth) * p.strength;
+      if(dt<pulseWidth) e+=(1-dt/pulseWidth)*p.strength;
     }
-    e += 0.15*(0.5 + 0.5*Math.sin(t*6.0));
-    return Math.min(1.0, e);
+    e+=0.15*(0.5+0.5*Math.sin(t*6.0));
+    return Math.min(1.0,e);
   }
 
   function step(){
-    const now = performance.now();
-    const t = (now - start)/1000;
-    if(talking && Array.isArray(jawInfluences) && jawIndex !== null){
-      const env = envelopeAt(Math.min(t,duration));
-      jawInfluences[jawIndex] = THREE.MathUtils.lerp(jawInfluences[jawIndex]||0, base + env*maxOpen, 0.5);
-      jawDriverRAF = requestAnimationFrame(step);
+    const now=performance.now();
+    const t=(now-start)/1000;
+    if(talking && Array.isArray(jawInfluences) && jawIndex!==null){
+      jawInfluences[jawIndex]=THREE.MathUtils.lerp(jawInfluences[jawIndex]||0,base+envelopeAt(Math.min(t,duration))*maxOpen,0.5);
+      jawDriverRAF=requestAnimationFrame(step);
     }
   }
   step();
@@ -210,12 +235,12 @@ function startJawDriver(text, rate=1.0){
 
 function stopJawDriver(){
   if(jawDriverRAF) cancelAnimationFrame(jawDriverRAF);
-  jawDriverRAF = null;
+  jawDriverRAF=null;
   if(Array.isArray(jawInfluences) && jawIndex!==null){
-    const closer = ()=>{
-      const current = jawInfluences[jawIndex] || 0;
-      const next = THREE.MathUtils.lerp(current,0,0.3);
-      jawInfluences[jawIndex] = next;
+    const closer=()=>{
+      const current=jawInfluences[jawIndex]||0;
+      const next=THREE.MathUtils.lerp(current,0,0.3);
+      jawInfluences[jawIndex]=next;
       if(Math.abs(next)>0.001) requestAnimationFrame(closer);
     };
     closer();
@@ -225,26 +250,26 @@ function stopJawDriver(){
 /* Sprachsynthese */
 function speak(text){
   if(!window.speechSynthesis) return;
-  const utter = new SpeechSynthesisUtterance(text);
-  utter.lang = "de-DE";
-  utter.rate = 0.95;
-  utter.pitch = 0.6;
-  utter.voice = selectedVoice;
+  const utter=new SpeechSynthesisUtterance(text);
+  utter.lang="de-DE";
+  utter.rate=0.95;
+  utter.pitch=0.6;
+  utter.voice=selectedVoice;
 
-  utter.onstart = ()=>{ talking=true; startJawDriver(text, utter.rate); };
-  utter.onend = ()=>{ talking=false; stopJawDriver(); };
+  utter.onstart=()=>{ talking=true; startJawDriver(text,utter.rate); };
+  utter.onend=()=>{ talking=false; stopJawDriver(); };
 
   speechSynthesis.speak(utter);
 }
 
 /* -------------------------
-   Fenstergröße
+   Fenstergröße anpassen
 ------------------------- */
-window.addEventListener("resize", ()=>{
-  camera.aspect = window.innerWidth/window.innerHeight;
+window.addEventListener("resize",()=>{
+  camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(window.innerWidth,window.innerHeight);
 });
 </script>
 </body>
-</html>  
+</html>
