--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,9 +41,6 @@ let baseRotY=Math.PI/2, baseRotX=0, baseY=0.6;
 let jawDict=null,jawInfluences=null,jawIndex=null,jawDriverRAF=null;
 let selectedVoice=null,greeted=false;
 
-/* -------------------------
-   Szene & Renderer
-------------------------- */
 const scene=new THREE.Scene();
 const camera=new THREE.PerspectiveCamera(30,window.innerWidth/window.innerHeight,0.1,1000);
 camera.position.set(0,0,2.5);
@@ -101,6 +98,9 @@ loader.load("./avatar.glb", gltf=>{
 
   loadingText.style.display="none";
   animate();
+
+  // Begrüßung nach Laden
+  greetIfNeeded();
 }, undefined, err=>{ console.error(err); loadingText.textContent="Fehler beim Laden des Avatars."; });
 
 /* -------------------------
@@ -129,10 +129,9 @@ function animate(){
 }
 
 /* -------------------------
-   Sprachsteuerung / Mikro
+   Mikrofon / Frage
 ------------------------- */
 const micBtn=document.getElementById("micBtn");
-const micNotice=document.getElementById("micNotice");
 let recognizing=false,recognition;
 
 if("webkitSpeechRecognition" in window){
@@ -141,23 +140,22 @@ if("webkitSpeechRecognition" in window){
 
   recognition.onresult=async event=>{
     const text=event.results[0][0].transcript;
-    micNotice.textContent=`🎤 Ihr Text: "${text}"`;
     try{
+      // Frage an Server, Antwort wird nur gesprochen
       const resp=await fetch("/ask",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({text})});
       const data=await resp.json();
-      if(data.answer){ micNotice.textContent=`💬 Antwort: ${data.answer}`; speak(data.answer); }
-      else micNotice.textContent="⚠️ Keine Antwort vom Server.";
-    }catch(e){ console.error(e); micNotice.textContent="❌ Fehler beim Abrufen der Antwort."; }
+      if(data.answer){ speak(data.answer); }
+    }catch(e){ console.error(e); }
   };
   recognition.onend=()=>{ recognizing=false; micBtn.style.background="#222"; };
-} else micNotice.textContent="🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt.";
+} else document.getElementById("micNotice").textContent="🎤 Sprachsteuerung wird in diesem Browser nicht unterstützt.";
 
 micBtn.onclick=()=>{
   if(!recognition) return;
   if(recognizing){ recognition.stop(); recognizing=false; micBtn.style.background="#222"; }
   else{ recognition.start(); recognizing=true; micBtn.style.background="#555"; }
 };
-   /* -------------------------
+/* -------------------------
    Sprachsynthese / Jaw-Driver
 ------------------------- */
 function getMaleVoice(){
@@ -167,7 +165,7 @@ function getMaleVoice(){
                   voices[0] || null;
 }
 
-// Lade Stimmen, bis eine Stimme verfügbar ist
+// Stimmen laden, ggf. wiederholen bis verfügbar
 function ensureVoicesLoaded(retries=5){
   getMaleVoice();
   if(!selectedVoice && retries>0){
@@ -175,21 +173,16 @@ function ensureVoicesLoaded(retries=5){
   }
 }
 
-// Browser-Initialisierung
-if(typeof speechSynthesis!=="undefined"){
-  speechSynthesis.onvoiceschanged=()=>{ ensureVoicesLoaded(); greetIfNeeded(); };
-  ensureVoicesLoaded();
-} else greetIfNeeded();
-
 // Begrüßung
 function greetIfNeeded(){
-  if(!greeted && selectedVoice){
+  if(!greeted){
     greeted=true;
-    setTimeout(()=>speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?"),200);
+    ensureVoicesLoaded();
+    setTimeout(()=>speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?"),300);
   }
 }
 
-/* Pulsplanung für Kieferanimation */
+/* Pulsplanung Kiefer */
 function buildPulseSchedule(text, rate=1.0){
   const durationEst=Math.max(0.8,text.length/(12*rate));
   const pulses=[];
@@ -263,7 +256,7 @@ function speak(text){
 }
 
 /* -------------------------
-   Fenstergröße anpassen
+   Fenstergröße
 ------------------------- */
 window.addEventListener("resize",()=>{
   camera.aspect=window.innerWidth/window.innerHeight;
